dropshot/tests/fail/bad_endpoint4.stderr
error[E0277]: the trait bound `QueryParams: schemars::JsonSchema` is not satisfied
   --> tests/fail/bad_endpoint4.rs:24:14
    |
24  |     _params: Query<QueryParams>,
    |              ^^^^^^^^^^^^^^^^^^ the trait `schemars::JsonSchema` is not implemented for `QueryParams`
    |
   ::: src/handler.rs:547:48
    |
547 | pub struct Query<QueryType: DeserializeOwned + JsonSchema + Send + Sync> {
    |                                                ---------- required by this bound in `dropshot::Query`

error[E0277]: the trait bound `for<'de> QueryParams: serde::de::Deserialize<'de>` is not satisfied
   --> tests/fail/bad_endpoint4.rs:24:14
    |
24  |     _params: Query<QueryParams>,
    |              ^^^^^^^^^^^^^^^^^^ the trait `for<'de> serde::de::Deserialize<'de>` is not implemented for `QueryParams`
    |
   ::: src/handler.rs:547:29
    |
547 | pub struct Query<QueryType: DeserializeOwned + JsonSchema + Send + Sync> {
    |                             ---------------- required by this bound in `dropshot::Query`
    |
    = note: required because of the requirements on the impl of `serde::de::DeserializeOwned` for `QueryParams`
